# achim

./: CMakeLists.txt  Makefile  README.md  install.sh  uninstall.sh
resources/: achim.qrc
scripts/: install_macos.sh  install_windows.ps1  package_android.sh  package_ios.sh
shortcuts/: achim.desktop
shortcuts/policy/: com.gg582.achim-alarm.policy
src/: alarmwindow.cpp  alarmwindow.h  main.cpp
